// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas renders canvas given dot pattern 1`] = `
<div
  className="dm-canvas"
>
  <DotPattern
    cellSize={10}
    radius={1}
  />
</div>
`;

exports[`Canvas renders canvas given grid pattern 1`] = `
<div
  className="dm-canvas"
>
  <GridPattern
    cellSize={10}
    patternSize={100}
  />
</div>
`;
